--- a/app/scss/_social.scss
+++ b/app/scss/_social.scss
@@ -35,17 +35,18 @@
       opacity: 0.5;
     }
   }
+
   &__list {
-    display: flex;
-    overflow: hidden;
+    padding-bottom: 30px;
   }
+  
 
   &__item {
     flex-shrink: 0;
     width: 245px;
     height: 145px;
     background-color: #f7f9fd;
-    margin-right: 30px;
+    // margin-right: 30px;
     border-radius: 14px;
     transition: transform 0.3s;
     &:hover {
@@ -96,6 +97,14 @@
   }
 }
 
+@media (min-width: 500px) {
+  .social {
+    &__list {
+      padding-left: 50px;  
+    }
+  }
+}
+
 @media (min-width: 1130px) {
   .social {
     padding: 30px 0 0;
@@ -125,36 +134,36 @@
       position: relative;
     }
 
-    &__list {
-      display: flex;
-      overflow: hidden;
-    }
-    &__btn {
-      position: absolute;
-      width: 48px;
-      height: 48px;
-      top: 38px;
-      background-color: $red;
-      border-radius: 50%;
-      background-repeat: no-repeat;
-      background-position: center;
-      outline: none;
-      cursor: pointer;
-      &:hover {
-        opacity: 0.7;
-      }
-      &:active {
-        opacity: 0.4;
-      }
-    }
-    &__btn--left {
-      left: -88px;
-      background-image: url("../images/left.svg");
-    }
-    &__btn--right {
-      right: -88px;
-      background-image: url("../images/right.svg");
-    }
+    // &__list {
+    //   display: flex;
+    //   overflow: hidden;
+    // }
+    // &__btn {
+    //   position: absolute;
+    //   width: 48px;
+    //   height: 48px;
+    //   top: 38px;
+    //   background-color: $red;
+    //   border-radius: 50%;
+    //   background-repeat: no-repeat;
+    //   background-position: center;
+    //   outline: none;
+    //   cursor: pointer;
+    //   &:hover {
+    //     opacity: 0.7;
+    //   }
+    //   &:active {
+    //     opacity: 0.4;
+    //   }
+    // }
+    // &__btn--left {
+    //   left: -88px;
+    //   background-image: url("../images/left.svg");
+    // }
+    // &__btn--right {
+    //   right: -88px;
+    //   background-image: url("../images/right.svg");
+    // }
     &__scroll {
       display: none;
     }
