--- a/app/scss/_slider.scss
+++ b/app/scss/_slider.scss
@@ -9,6 +9,10 @@
   &__item {
     padding-bottom: 20px;
   }
+
+  &__item--active {
+    display: none;
+  }
   &__item-wrapper {
     padding: 40px 0;
     width: 100%;
