--- a/app/scss/_social.scss
+++ b/app/scss/_social.scss
@@ -1,5 +1,13 @@
 .social {
   padding: 40px 0 70px;
+  &__wrapper {
+    min-width: 320px;
+    width: 90%;
+    padding: 0 16px;
+    margin: 0 auto;
+    position: relative;
+  }
+
   &__heading {
     padding: 10px 0 20px;
   }
@@ -7,7 +15,6 @@
     font-size: 18px;
     padding-right: 10px;
   }
-
   &__save {
     position: relative;
     font-size: 16px;
@@ -39,14 +46,12 @@
   &__list {
     padding-bottom: 30px;
   }
-  
 
   &__item {
     flex-shrink: 0;
     width: 245px;
     height: 145px;
     background-color: #f7f9fd;
-    // margin-right: 30px;
     border-radius: 14px;
     transition: transform 0.3s;
     &:hover {
@@ -78,29 +83,13 @@
     font-weight: 700;
     padding: 20px 0 15px;
   }
-  &__scroll {
-    display: block;
-    position: relative;
-    width: 100%;
-    height: 2px;
-    background-color: $grey;
-    cursor: pointer;
-    &::before {
-      position: absolute;
-      content: "";
-      bottom: 0;
-      left: -16px;
-      width: 30%;
-      height: 2px;
-      background-color: $red;
-    }
-  }
+  
 }
 
 @media (min-width: 500px) {
   .social {
     &__list {
-      padding-left: 50px;  
+      padding-left: 50px;
     }
   }
 }
@@ -108,7 +97,7 @@
 @media (min-width: 1130px) {
   .social {
     padding: 30px 0 0;
-    &__images {
+        &__images {
       margin: 0 auto;
       display: block;
       width: 645px;
@@ -131,41 +120,7 @@
       margin: 60px auto 140px;
     }
     &__slider {
-      position: relative;
-    }
-
-    // &__list {
-    //   display: flex;
-    //   overflow: hidden;
-    // }
-    // &__btn {
-    //   position: absolute;
-    //   width: 48px;
-    //   height: 48px;
-    //   top: 38px;
-    //   background-color: $red;
-    //   border-radius: 50%;
-    //   background-repeat: no-repeat;
-    //   background-position: center;
-    //   outline: none;
-    //   cursor: pointer;
-    //   &:hover {
-    //     opacity: 0.7;
-    //   }
-    //   &:active {
-    //     opacity: 0.4;
-    //   }
-    // }
-    // &__btn--left {
-    //   left: -88px;
-    //   background-image: url("../images/left.svg");
-    // }
-    // &__btn--right {
-    //   right: -88px;
-    //   background-image: url("../images/right.svg");
-    // }
-    &__scroll {
-      display: none;
+      position: relative;      
     }
   }
 }
