--- a/app/scss/_swiper.scss
+++ b/app/scss/_swiper.scss
@@ -1,72 +1,75 @@
+
 .swiper {
+  &-button-prev {
+    display: none;
+  }
+  &-button-next {
+    display: none;
+  }
+
+  &-scrollbar-drag {
+    background-color: red;
+  }
+}
+
+@media (min-width: 500px) {  
+  .swiper {
+    &-scrollbar {
+      display: none;
+    }
     &-button-prev {
-       display: none;
+      display: block;
+      position: absolute;
+      z-index: 234;
+      width: 48px;
+      height: 48px;
+      top: 68px;
+      background-color: $red;
+      border-radius: 50%;
+      background-image: url("../images/left.svg");
+      background-repeat: no-repeat;
+      background-position: center;
+      outline: none;
+      cursor: pointer;
+      left: 0px;
+
+      &::after {
+        opacity: 0;
+      }
+      &:hover {
+        opacity: 0.7;
+      }
+      &:active {
+        opacity: 0.4;
+      }
     }
     &-button-next {
-        display: none;
-    }
-   
+      display: block;
+      position: absolute;
+      width: 48px;
+      height: 48px;
+      top: 68px;
+      background-color: $red;
+      border-radius: 50%;
+      background-image: url("../images/right.svg");
+      background-repeat: no-repeat;
+      background-position: center;
+      outline: none;
+      cursor: pointer;
+      right: 0px;
 
-    &-scrollbar-drag {
-        background-color: red;
+      &::after {
+        opacity: 0;
+      }
+      &:hover {
+        opacity: 0.7;
+      }
+      &:active {
+        opacity: 0.4;
+      }
     }
-    
+  }
 }
 
-@media (min-width: 500px) {
-    .swiper {
-        &-scrollbar {
-            display: none;
-        }
-        &-button-prev {
-            display: block;
-            position: absolute;
-            width: 48px;
-            height: 48px;
-            top: 68px;
-            background-color: $red;
-            border-radius: 50%;
-            background-image: url("../images/left.svg");
-            background-repeat: no-repeat;
-            background-position: center;
-            outline: none;
-            cursor: pointer;
-            left: 0px;
-          
-        &::after {        
-            opacity: .0;
-          }
-            &:hover {
-              opacity: 0.7;
-            }
-            &:active {
-              opacity: 0.4;
-            }
-        }
-        &-button-next {
-            display: block;
-            position: absolute;
-            width: 48px;
-            height: 48px;
-            top: 68px;
-            background-color: $red;
-            border-radius: 50%;
-            background-image: url("../images/right.svg");
-            background-repeat: no-repeat;
-            background-position: center;
-            outline: none;
-            cursor: pointer;
-            right: 0px;
-          
-        &::after {        
-            opacity: .0;
-          }
-            &:hover {
-              opacity: 0.7;
-            }
-            &:active {
-              opacity: 0.4;
-            }
-        }
-    }
-}
+
+
