--- a/app/scss/_social.scss
+++ b/app/scss/_social.scss
@@ -2,7 +2,6 @@
   padding: 40px 0 70px;
   &__wrapper {
     min-width: 320px;
-    width: 90%;
     padding: 0 16px;
     margin: 0 auto;
     position: relative;
@@ -87,9 +86,9 @@
 }
 
 @media (min-width: 500px) {
-  .social {
-    &__list {
-      padding-left: 50px;
+  .social {   
+    &__wrapper { 
+      padding: 0;     
     }
   }
 }
