--- a/app/scss/_swiper.scss
+++ b/app/scss/_swiper.scss
@@ -1,22 +1,72 @@
+.social-scrollbar .swiper-scrollbar-drag {
+  background-color: red;
+}
 
-.swiper {
+.social-scrollbar {
+  cursor: pointer;
+}
+
+.advantegs-scrollbar {
+  display: none;
+}
+
+.social__button.swiper {
   &-button-prev {
     display: none;
   }
   &-button-next {
     display: none;
   }
-
-  &-scrollbar-drag {
-    background-color: red;
-  }
 }
 
-@media (min-width: 870px) {    
-  .swiper {
-    &-scrollbar {
-      display: none;
+@media (min-width: 1130px) {
+  .social-scrollbar {
+    display: none;
+  }
+
+  .advantegs-scrollbar {
+    display: block;
+    left: 85px;    
+    background-color: $grey;
+  }
+
+  .advantegs-scrollbar .swiper-scrollbar-drag {
+    width: 48px;
+    border-radius: 50%;
+    background-color: $red;
+    display: block;
+    position: relative;
+    left: -22px;
+    cursor: pointer;
+    &::before {
+      content: "";
+      position: absolute;
+      top: 12px;
+      left: 19px;
+      height: 6px;
+      width: 10px;
+      background-image: url("../images/scroll.svg");
+      background-repeat: no-repeat;
     }
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: 12px;
+      left: 19px;
+      height: 6px;
+      width: 10px;
+      background-image: url("../images/scroll.svg");
+      background-repeat: no-repeat;
+      transform: rotate(180deg);
+    }
+    &:hover {
+      opacity: 0.7;
+    }
+    &:active {
+      opacity: 0.4;
+    }
+  }
+  .social__button.swiper {
     &-button-prev {
       display: block;
       position: absolute;
@@ -57,7 +107,6 @@
       outline: none;
       cursor: pointer;
       right: -100px;
-
       &::after {
         opacity: 0;
       }
@@ -70,6 +119,3 @@
     }
   }
 }
-
-
-
