--- a/app/scss/_price.scss
+++ b/app/scss/_price.scss
@@ -12,13 +12,12 @@
   
   &__item {
     flex-shrink: 0;
-    width: 288px;
+    width: 240px;
     height: 260px;
     border-radius: 14px;
-    background-color: white;
-    padding: 20px 8px;
+    background-color: white;    
     margin-bottom: 16px;
-    margin-right: 16px;
+    margin-left: 10px;
     position: relative;
     box-shadow: 0px 4px 6px rgba(18, 28, 65, 0.1);
     &::after {
@@ -37,6 +36,9 @@
   }
   &__desktop {
     display: none;
+  }
+  &__intro {
+    padding: 20px 18px;
   }
   &__intro--social {
     width: 100%;
@@ -94,6 +96,7 @@
   text-transform: uppercase;
 }
   &__intro-link {
+    margin-right: 10px;
     display: block;
     font-size: 14px;
     text-transform: uppercase;
@@ -135,58 +138,15 @@ transition: transform 0.3s;
     display: flex;
     justify-content: space-between;
     align-items: center;
-  }
-
-  &__nav-button {
-    width: 48px;
-    height: 48px;
-    border-radius: 50%;
-    background-color: white;
-    cursor: pointer;
-    position: relative;
-    outline: none;
-    transition: transform 0.3s;
-    &::before {
-      content: "";
-      position: absolute;
-      top: 19px;
-      left: 21px;
-      width: 15px;
-      height: 15px;
-      background-image: url("../images/price-button.svg");
-      background-repeat: no-repeat;
-    }
-    &:hover {
-      opacity: 0.8;
-      transform: scale(0.8);
-    }
-    &:active {
-      opacity: 0.4;
-    }
-  }
+    padding-top: 30px;
+  }  
 
   &__nav-wrapper {
     width: 100px;
     display: flex;
     justify-content: space-between;
   }
-
-  &__nav-circle {
-    width: 8px;
-    height: 8px;
-    border-radius: 50%;
-    background-color: $grey;
-    cursor: pointer;
-  }
-  &__nav-circle--active {
-    background-color: $red;
-  }
-  &__nav-button--right {
-    &::before {
-      background-image: url("../images/price-button-right.svg");
-      background-repeat: no-repeat;
-    }
-  }
+ 
 }
 
 @media (min-width: 1130px) {
@@ -210,9 +170,8 @@ transition: transform 0.3s;
 
     &__item {
       width: 336px;
-      padding: 30px 15px 20px;
       margin-bottom: 30px;
-      margin-right: 30px;
+      margin-right: 15px;
       &::after {
         right: 25px;
         width: 280px;
