--- a/app/scss/_form.scss
+++ b/app/scss/_form.scss
@@ -147,7 +147,7 @@
     &:checked + .form__checkbox-style::after {
       content: "";
       position: absolute;
-      top: 2px;
+      top: 0;
       left: 12px;
       width: 18px;
       height: 18px;
@@ -214,7 +214,7 @@
     }
     &__checkbox {
       &:checked + .form__checkbox-style::after {
-        top: 2px;
+        top: 0;
         left: 12px;
       }
     }
