--- a/app/scss/_price.scss
+++ b/app/scss/_price.scss
@@ -17,7 +17,7 @@
     border-radius: 14px;
     background-color: white;    
     margin-bottom: 16px;
-    margin-left: 10px;
+    margin-left: 8px;
     position: relative;
     box-shadow: 0px 4px 6px rgba(18, 28, 65, 0.1);
     &::after {
@@ -32,7 +32,7 @@
     }
   }
   &__item--social {
-    padding: 10px 5px 0 15px;
+    // padding: 10px 5px 0 15px;
   }
   &__desktop {
     display: none;
@@ -96,13 +96,13 @@
   text-transform: uppercase;
 }
   &__intro-link {
-    margin-right: 10px;
+    margin-right: 30px;
     display: block;
     font-size: 14px;
     text-transform: uppercase;
     font-weight: 700;
     color: white;
-    width: 132px;
+    width: 130px;
     height: 44px;
     background-color: $red;
     border-radius: 6px;
