--- a/app/scss/_slider.scss
+++ b/app/scss/_slider.scss
@@ -106,8 +106,6 @@
 @media (min-width: 1130px) {
   .slider {
     margin: 200px 0;
-    height: 860px;
-    overflow: hidden;
     &-company {
       margin: 200px 0 50px;
     }
@@ -130,6 +128,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+      padding-bottom: 20px;
     }
     &__title-top {
       color: #3b4a6d;
@@ -189,15 +188,6 @@
         background-color: #fff;
         border-radius: 50%;
         transform: translate(-50%, -50%);
-      }
-    }
-    &__line-top--active {
-      background-color: $red;
-      &::before {
-        width: 20px;
-        height: 20px;
-        border: 2px solid $red;
-        background-color: $red;
       }
     }
     &__item {
