--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -17,7 +17,10 @@
     &--active {
       transform: translateX(0%);
       box-shadow: 4px 0px 4px 0px rgba(0, 0, 0, 0.36);
-      overflow: hidden;
+      overflow: scroll;
+      &::-webkit-scrollbar {
+        width: 0;
+      }
     }
   }
   &__wrapper-scroll {
